feat: (problem7) 총점수 합산 기능추가